--- a/aboutme.html
+++ b/aboutme.html
@@ -26,11 +26,60 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								
-								<h2>Magna feugiat lorem</h2>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis fames ac ante ipsum primis in faucibus.</p>
-								<p>Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Consequat leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit enim turpis lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet est velit quis lorem.</p>
-								<h2>Tempus veroeros</h2>
-								<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
+								<h2>Analytical Mindset</h2>
+								<p>
+									In the world of data, I don't just see numbers; I see narratives waiting to be discovered. My analytical mindset is not a mere skill; it's a guiding force that empowers me to unravel the hidden stories within complex datasets. I have a knack for peeling back layers, identifying patterns, and transforming raw information into actionable intelligence.
+								</p>
+
+								<h2>Problem Solver</h2>
+								<p>
+									Consider me your data detective. Armed with advanced analytics, I embark on solving intricate problems not as obstacles but as opportunities to innovate. I've witnessed the transformative power of data in enhancing insights, navigating complexities, and driving decisions. I approach each challenge with curiosity and determination, ensuring that the solutions provided align with organizational goals. believe in not just addressing surface-level issues but delving deep to find innovative and sustainable solutions.
+								</p>
+
+
+								<h2>Technical Proficiency</h2>
+								<p>
+									In the ever-changing world of technology and data, my technical skills are a blend of various abilities, each contributing to the innovation landscape. I'm proficient in languages like Python, R, SQL, HTML, and CSS, using them to create intricate code that brings ideas to life. In the field of data science, I act as the coordinator of intelligence, exploring Machine Learning, AI, Natural Language Processing, OpenCV, and the art of statistical analysis. Beyond the algorithms, I work with precision—extracting, manipulating, and mining data to unveil its meaningful stories. Cloud Computing and Database Management aren't just tools; they are gateways to a space where data finds its place. Yet, my capabilities go beyond coding. In the area of business analytics, I have the ability to visualize insights, report trends, and create dashboards using MongoDB, Power BI, and Tableau. These platforms are not just tools; they are stages where data transforms into a compelling performance. See my technical skills not just as a set of abilities but as a collection of possibilities, an invitation to join a journey where technology meets inspiration, and each line of code contributes to an innovative masterpiece.								
+								</p>
+
+								<h2>Detail-Oriented</h2>
+								<p>
+									My meticulous attention to detail is a key asset in ensuring data accuracy and precision. Whether it's cleaning and organizing datasets or conducting in-depth analyses, I approach every task with a keen eye for detail.
+								</p>
+
+								<h2>Adaptability</h2>
+								<p>
+									Adaptability is a hallmark of my professional approach. Transitioning from roles such as Data Science Analyst at AHex Technologies to Subject Matter Expert at Freeco Private Limited, I have thrived in diverse environments. My experiences have strengthened my adaptability and proven my ability to excel in dynamic settings.
+								</p>
+
+
+								<h2>Team Player</h2>
+								<p>
+									Collaboration is integral to any data-driven endeavor, and I pride myself on being a strong team player. Serving as Head Girl during my academic journey, I coordinated seamless transitions and streamlined communication among 500+ students. This experience showcased my ability to foster collaboration and enhance overall team experiences.
+								</p>
+
+
+								<h2>Critical Thinker</h2>
+								<p>
+									I thrive in dissecting complex datasets, identifying trends, and deriving meaningful conclusions, ensuring that the analyses provided are not only accurate but also relevant to the organizational goals.
+								</p>
+
+
+								<h2>Quick Learner</h2>
+								<p>
+									A perpetual learner at heart, I am deeply passionate about staying at the forefront of the latest developments in data analysis. This passion translates into my ability to quickly grasp new concepts and technologies, ensuring that I am well-equipped to explore cutting-edge solutions and contribute effectively.
+								</p>
+
+								<h2>Effective Communicator</h2>
+								<p>
+									In addition to my technical skills, I possess strong communication abilities. Whether conveying complex analytical findings or coordinating with cross-functional teams, I ensure that communication is clear, concise, and tailored to the audience.
+								</p>
+
+
+								<p>
+									In conclusion, my unique combination of an analytical mindset, problem-solving prowess, and technical proficiency positions me as a valuable asset to any team in need of a dedicated data professional. With a keen eye for detail, adaptability to diverse environments, and a proven track record of excelling in dynamic roles, I bring not just a set of skills, but a collection of possibilities to the table. My ability to dissect complex datasets, think critically, and communicate effectively ensures that I not only uncover hidden narratives within data but also translate them into actionable intelligence aligned with organizational goals. As a perpetual learner and a collaborative team player, I am ready to embark on the journey where technology meets inspiration, contributing my skills to drive success in data-driven initiatives. "If you seek a candidate who can turn challenges into opportunities, innovate through advanced analytics, and communicate insights effectively, then I am the ideal candidate for your team".
+								</p>
+
 							</section>
 
 					</div>
