--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 									<li class="style1">
 										<a href="#" class="icon solid"><img src="images/pic06.jpg" alt="" /></a>
 										<div>
-											<h3>Sentiment Analysis Using NLP and Machine Learning</h3>
+											<h3>SENTIMENT ANALYSIS USING NLP AND MACHINE LEARNING</h3>
 											<p>
 												Developed a Sentiment Analysis model utilizing NLP to assess emotions in restaurant reviews, resulting with classifying text as either positive (1) or negative (0). Conducted rigorous data preprocessing, feature engineering with a Bag of Words model, and trained a tuned Multinomial Naive Bayes classifier.
 												Evaluation metrics, error analysis, and visualizations were utilized for a comprehensive understanding of the model's performance. This project not only demonstrates expertise in NLP techniques but also highlights the ability to develop effective solutions for sentiment classification in real-world scenarios.
@@ -155,7 +155,7 @@
 									<li class="style5">
 										<a href="#" class="icon solid"><img src="images/pic10.jpg" alt="" /></a>
 										<div>
-											<h3>Retail Food Store Management System</h3>
+											<h3>RETAIL FOOD STORE MANAGEMENT SYSTEM</h3>
 											<p>
 												Designed and implemented SQL based data system for efficient management of Retail Food Store, 
 												featuring normalized tables, dynamic data insertion, and optimized queries. Proficiently handled dataset retrieval, cleanup, and execution analysis, showcasing strong SQL database management skills. 
@@ -167,7 +167,7 @@
 									<li class="style3">
 										<a href="#" class="icon solid"><img src="images/pic11.jpg" alt="" /></a>
 										<div>
-											<h3>Oil Price Time Series Analysis</h3>
+											<h3>OIL PRICE TIME SERIES ANALYSIS</h3>
 											<p>
 												Analyzed daily oil prices through time series techniques in R. It involves loading the dataset, handling missing data using interpolation, and applying ETS and Holt-Winters models for forecasting. 
 												The resulted accuracy of the forecasting models, including AAN, ANN, MAN, and various Holt-Winters models, is assessed, providing insights into the oil price trends and patterns.
